<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Geographic Quiz</string>
    <string name="question1">1.How many continents are there?</string>
    <string name="answer1_q1">3</string>
    <string name="answer2_q1">2</string>
    <string name="answer3_q1">5</string>
    <string name="answer4_q1">7</string>
    <string name="question2">2. Does Europe continent exists?</string>
    <string name="answer1_q2">Yes</string>
    <string name="answer2_q2">No</string>
    <string name="question3">3. How many countries exists?</string>
    <string name="answer1_q3">Few than 50</string>
    <string name="answer2_q3">More than 200</string>
    <string name="answer3_q3">Arround 150</string>
    <string name="question4">4. How many people exists?</string>
    <string name="answer1_q4">Not many. Arround 1 billion</string>
    <string name="answer2_q4">Under 6 billions</string>
    <string name="answer3_q4">Arround 7 billions</string>
    <string name="question5">5. What is the highest mountain?</string>
    <string name="answer1_q5">Elbrus-Europe</string>
    <string name="answer2_q5">Chimborazo-America</string>
    <string name="answer3_q5">Everest-Asia</string>
    <string name="answer4_q5">Kosciuszko-Australia</string>
    <string name="question6">6. Where is Austria situated?</string>
    <string name="answer1_q6">Europe</string>
    <string name="answer2_q6">Africa</string>
    <string name="answer3_q6">Earth</string>
    <string name="answer4_q6">Mars</string>
    <string name="question7">7. What is the capital of Europe??</string>
    <string name="answer1_q7">Paris</string>
    <string name="answer2_q7">London</string>
    <string name="answer3_q7">Moscow</string>
    <string name="answer4_q7">None above</string>
    <string name="header_img">QuizAppHeaderImage</string>
    <string name="submit_button">Oh yeah! Check my knowledge Now!</string>
    <string name="result_message">Your Score: <xliff:g id="score"> %s </xliff:g> out of <xliff:g id="scoremax"> %s </xliff:g> </string>
    <string name="dialog_title">Your results are</string>
    <string name="ok">OK</string>
    <string name="cancelButton">Cancel</string>
    <string name="resetButton">Reset button</string>

</resources>
