<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/root_view"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        style="@style/header_image"
        android:layout_width="346dp"
        android:contentDescription="@string/header_img"
        android:src="@drawable/udacity" />

    <ScrollView
        android:id="@+id/scrollView"
        style="@style/scroll_view_quiz">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                style="@style/heading_question"
                android:text="@string/question1" />

            <RadioGroup
                android:id="@+id/question1_radio_group"
                style="@style/radio_group">

                <RadioButton
                    android:id="@+id/question1_radio_button1"
                    style="@style/radio_answer1"
                    android:text="@string/answer1_q1" />

                <RadioButton
                    android:id="@+id/question1_radio_button2"
                    style="@style/radio_answer2"
                    android:text="@string/answer2_q1" />

                <RadioButton
                    android:id="@+id/question1_radio_button3"
                    style="@style/radio_answer3"
                    android:text="@string/answer3_q1" />

                <RadioButton
                    android:id="@+id/question1_radio_button4"
                    style="@style/radio_answer4"
                    android:text="@string/answer4_q1" />

            </RadioGroup>

            <TextView style="@style/linearseparator" />

            <TextView
                style="@style/heading_question"
                android:text="@string/question2" />

            <RadioGroup
                android:id="@+id/question2_radio_group"
                style="@style/radio_group">

                <RadioButton
                    android:id="@+id/question2_radio_button1"
                    style="@style/radio_answer1"
                    android:text="@string/answer1_q2" />

                <RadioButton
                    android:id="@+id/question2_radio_button2"
                    style="@style/radio_answer2"
                    android:text="@string/answer2_q2" />



            </RadioGroup>


            <TextView style="@style/linearseparator" />


            <TextView
                style="@style/heading_question"
                android:text="@string/question3" />

            <RadioGroup
                android:id="@+id/question3_radio_group"
                style="@style/radio_group">

            <RadioButton
                android:id="@+id/question3_radio_button1"
                style="@style/radio_answer1"
                android:text="@string/answer1_q3" />

            <RadioButton
                android:id="@+id/question3_radio_button2"
                style="@style/radio_answer2"
                android:text="@string/answer2_q3" />

            <RadioButton
                android:id="@+id/question3_radio_button3"
                style="@style/radio_answer3"
                android:text="@string/answer3_q3" />

            </RadioGroup>

            <TextView style="@style/linearseparator" />


            <TextView
                style="@style/heading_question"
                android:text="@string/question4" />

            <RadioGroup
                android:id="@+id/question4_radio_group"
                style="@style/radio_group">

                <RadioButton
                    android:id="@+id/question4_radio_button1"
                    style="@style/radio_answer4"
                    android:text="@string/answer1_q4" />

                <RadioButton
                    android:id="@+id/question4_radio_button2"
                    style="@style/radio_answer2"
                    android:text="@string/answer2_q4" />

                <RadioButton
                    android:id="@+id/question4_radio_button3"
                    style="@style/radio_answer3"
                    android:text="@string/answer3_q4" />


            </RadioGroup>

            <TextView style="@style/linearseparator" />

            <TextView
                style="@style/heading_question"
                android:text="@string/question5" />

            <RadioGroup
                android:id="@+id/question5_radio_group"
                style="@style/radio_group">

                <RadioButton
                    android:id="@+id/question5_radio_button1"
                    style="@style/radio_answer1"
                    android:text="@string/answer1_q5" />

                <RadioButton
                    android:id="@+id/question5_radio_button2"
                    style="@style/radio_answer2"
                    android:text="@string/answer2_q5" />

                <RadioButton
                    android:id="@+id/question5_radio_button3"
                    style="@style/radio_answer3"
                    android:text="@string/answer3_q5" />

                <RadioButton
                    android:id="@+id/question5_radio_button4"
                    style="@style/radio_answer4"
                    android:text="@string/answer4_q5" />

            </RadioGroup>

            <TextView style="@style/linearseparator" />

            <TextView
                style="@style/heading_question"
                android:text="@string/question6" />

            <CheckBox
                android:id="@+id/question6_checkbox1"
                style="@style/checkbox_answer1"
                android:text="@string/answer1_q6" />

            <CheckBox
                android:id="@+id/question6_checkbox2"
                style="@style/checkbox_answer2"
                android:text="@string/answer2_q6" />

            <CheckBox
                android:id="@+id/question6_checkbox3"
                style="@style/checkbox_answer3"
                android:text="@string/answer3_q6" />

            <CheckBox
                android:id="@+id/question6_checkbox4"
                style="@style/checkbox_answer4"
                android:text="@string/answer4_q6" />

            <TextView style="@style/linearseparator" />

            <TextView
                style="@style/heading_question"
                android:text="@string/question7" />

            <RadioGroup
                android:id="@+id/question7_radio_group"
                style="@style/radio_group">

                <RadioButton
                    android:id="@+id/question7_radio_button1"
                    style="@style/radio_answer1"
                    android:text="@string/answer1_q7" />

                <RadioButton
                    android:id="@+id/question7_radio_button2"
                    style="@style/radio_answer2"
                    android:text="@string/answer2_q7" />

                <RadioButton
                    android:id="@+id/question7_radio_button3"
                    style="@style/radio_answer3"
                    android:text="@string/answer3_q7" />

                <RadioButton
                    android:id="@+id/question7_radio_button4"
                    style="@style/radio_answer4"
                    android:text="@string/answer4_q7" />

            </RadioGroup>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/submit_button"
        style="@style/button_submit"
        android:onClick="submit"
        android:text="@string/submit_button" />

</LinearLayout>

